--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,25 @@
-# local package
--e .
-
 # external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+altair
+altair-transform
+docopt
+Keras
+Keras-Applications
+Keras-Preprocessing
+Markdown
+matplotlib
+nlpsummarize
+nltk
+numpy
+numpydoc
+pandas
+pyLDAvis
+requests
+scikit-learn
+spacy
+tensorflow
+tensorflow-estimator
+tensorflow-hub
+textblob
+tokenizers
+
+
